<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/save"
        android:icon="@drawable/ic_content_save_dark" android:title="@string/save" android:showAsAction="never"/>
    <item android:id="@+id/edit"
        android:icon="@drawable/ic_hardware_keyboard_dark" android:title="@string/write" android:showAsAction="never"/>
    <item android:id="@+id/manualWrite"
        android:icon="@drawable/ic_action_edit_dark" android:title="@string/edit" android:showAsAction="never"/>
    <item android:id="@+id/clearPage"
        android:title="@string/clear" android:showAsAction="never"/>
    <item android:id="@+id/newPage"
        android:icon="@drawable/ic_content_new_dark" android:title="@string/newpage" android:showAsAction="never"/>
    <item android:id="@+id/deletePage"
        android:title="@string/deletePage" android:showAsAction="never"/>
    <item android:id="@+id/photo"
        android:icon="@drawable/ic_action_photo_dark" android:title="@string/photo" android:showAsAction="never" />
    <item android:id="@+id/gallery"
          android:icon="@drawable/ic_action_photo_dark" android:title="@string/gallery" android:showAsAction="never" />
    <item android:id="@+id/exportPDF"
        android:title="@string/exportpdf" android:showAsAction="never"/>
    <!--<item android:id="@+id/exportODF"
        android:title="@string/exportodf" android:showAsAction="never"/>-->
    <item android:id="@+id/share"
        android:title="@string/sharePage" android:showAsAction="ifRoom" android:icon="@android:drawable/ic_menu_share"/>
    <item android:id="@+id/help"
        android:title="@string/helpShow" android:showAsAction="ifRoom" android:icon="@android:drawable/ic_menu_help"/>
    <!--     <item android:id="@+id/strokeWidth"
            android:title="@string/strokewidth" android:showAsAction="never"/>
        <item android:id="@+id/quit"
            android:title="@string/Quit" />
        <item android:id="@+id/convert"
            android:title="@string/Convert" />
        <item android:id="@+id/openPdf" android:title="@string/openPdf"></item><item android:id="@+id/takeAPicture" android:title="@string/takeAPicture"></item>
        <item android:id="@+id/deleteThePicture" android:title="@string/deleteThePicture"></item>
        <item android:id="@+id/setBookmark" android:title="@string/setBookmark"></item>
        <item android:id="@+id/cancelBookmark" android:title="@string/cancelBookmark"></item> -->
    
    
</menu>